--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -155,11 +155,10 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="formPrincipal"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="2"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="387"/>
-        <CursorPos X="3" Y="389"/>
+        <TopLine Value="582"/>
+        <CursorPos X="3" Y="584"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -170,8 +169,8 @@
         <UnitName Value="Versiculo"/>
         <EditorIndex Value="9"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="63"/>
-        <CursorPos X="15" Y="80"/>
+        <TopLine Value="391"/>
+        <CursorPos Y="400"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -194,10 +193,11 @@
         <Filename Value="projeto.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Projeto"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="5"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="1563"/>
-        <CursorPos Y="1580"/>
+        <TopLine Value="863"/>
+        <CursorPos X="69" Y="868"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -276,8 +276,8 @@
         <UnitName Value="MemoVersiculo"/>
         <EditorIndex Value="15"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="60"/>
-        <CursorPos Y="85"/>
+        <TopLine Value="103"/>
+        <CursorPos Y="123"/>
         <UsageCount Value="224"/>
         <Loaded Value="True"/>
       </Unit10>
@@ -406,8 +406,8 @@
         <UnitName Value="Sintagma"/>
         <EditorIndex Value="10"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="68"/>
-        <CursorPos X="15" Y="84"/>
+        <TopLine Value="193"/>
+        <CursorPos X="22" Y="215"/>
         <UsageCount Value="202"/>
         <Loaded Value="True"/>
       </Unit22>
@@ -551,123 +551,127 @@
         <UsageCount Value="10"/>
       </Unit39>
     </Units>
-    <JumpHistory Count="29" HistoryIndex="28">
+    <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="96" Column="19" TopLine="64"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="389" Column="3" TopLine="387"/>
       </Position1>
       <Position2>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="109" Column="47" TopLine="77"/>
+        <Filename Value="memoversiculo.pas"/>
+        <Caret Line="85" TopLine="60"/>
       </Position2>
       <Position3>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="111" Column="45" TopLine="79"/>
+        <Filename Value="memoversiculo.pas"/>
+        <Caret Line="36" Column="15" TopLine="24"/>
       </Position3>
       <Position4>
-        <Filename Value="formpopup.pas"/>
-        <Caret Line="128" Column="19" TopLine="96"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1580" TopLine="1563"/>
       </Position4>
       <Position5>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1329" Column="30" TopLine="1311"/>
+        <Caret Line="64" Column="19" TopLine="51"/>
       </Position5>
       <Position6>
         <Filename Value="projeto.pas"/>
-        <Caret Line="128" Column="33" TopLine="117"/>
+        <Caret Line="992" Column="17" TopLine="971"/>
       </Position6>
       <Position7>
         <Filename Value="projeto.pas"/>
-        <Caret Line="916" Column="5" TopLine="905"/>
+        <Caret Line="1372" Column="17" TopLine="1352"/>
       </Position7>
       <Position8>
         <Filename Value="projeto.pas"/>
-        <Caret Line="148" Column="15" TopLine="136"/>
+        <Caret Line="1373" Column="17" TopLine="1353"/>
       </Position8>
       <Position9>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1580" Column="17" TopLine="1569"/>
+        <Caret Line="1427" Column="17" TopLine="1407"/>
       </Position9>
       <Position10>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1578" Column="27" TopLine="1565"/>
+        <Caret Line="1544" Column="17" TopLine="1524"/>
       </Position10>
       <Position11>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="770" TopLine="760"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="64" Column="19" TopLine="51"/>
       </Position11>
       <Position12>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="777" TopLine="767"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="992" Column="17" TopLine="971"/>
       </Position12>
       <Position13>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="715" TopLine="694"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1372" Column="17" TopLine="1352"/>
       </Position13>
       <Position14>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="135" Column="15" TopLine="123"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1373" Column="17" TopLine="1353"/>
       </Position14>
       <Position15>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="613" Column="30" TopLine="600"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1427" Column="17" TopLine="1407"/>
       </Position15>
       <Position16>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="136" Column="15" TopLine="124"/>
+        <Filename Value="memoversiculo.pas"/>
+        <Caret Line="69" TopLine="55"/>
       </Position16>
       <Position17>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="649" Column="17" TopLine="631"/>
+        <Filename Value="memoversiculo.pas"/>
+        <Caret Line="80" Column="4" TopLine="57"/>
       </Position17>
       <Position18>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="710" Column="7" TopLine="703"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1544" Column="17" TopLine="1524"/>
       </Position18>
       <Position19>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="699" Column="13" TopLine="698"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="64" Column="19" TopLine="51"/>
       </Position19>
       <Position20>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="135" Column="15" TopLine="135"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="992" Column="17" TopLine="971"/>
       </Position20>
       <Position21>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="612" Column="23" TopLine="604"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1373" Column="68" TopLine="1352"/>
       </Position21>
       <Position22>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="650" Column="68" TopLine="629"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="129" Column="15" TopLine="118"/>
       </Position22>
       <Position23>
         <Filename Value="formprincipal.pas"/>
-        <Caret Line="766" Column="35" TopLine="745"/>
+        <Caret Line="389" Column="3" TopLine="387"/>
       </Position23>
       <Position24>
         <Filename Value="formprincipal.pas"/>
-        <Caret Line="295" Column="33" TopLine="283"/>
+        <Caret Line="584" Column="3" TopLine="582"/>
       </Position24>
       <Position25>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="454" Column="35" TopLine="434"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="149" Column="15" TopLine="137"/>
       </Position25>
       <Position26>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="766" Column="35" TopLine="745"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1586" Column="3" TopLine="1584"/>
       </Position26>
       <Position27>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="295" Column="33" TopLine="283"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="117" Column="15" TopLine="105"/>
       </Position27>
       <Position28>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="390" Column="3" TopLine="388"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="714" Column="69" TopLine="709"/>
       </Position28>
       <Position29>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="389" Column="3" TopLine="387"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="86" Column="21" TopLine="68"/>
       </Position29>
+      <Position30>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="714" Column="69" TopLine="709"/>
+      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
@@ -696,7 +700,7 @@
     </Linking>
   </CompilerOptions>
   <Debugging>
-    <BreakPoints Count="4">
+    <BreakPoints Count="2">
       <Item1>
         <Kind Value="bpkSource"/>
         <WatchScope Value="wpsLocal"/>
@@ -708,23 +712,9 @@
         <Kind Value="bpkSource"/>
         <WatchScope Value="wpsLocal"/>
         <WatchKind Value="wpkWrite"/>
-        <Source Value="projeto.pas"/>
-        <Line Value="920"/>
-      </Item2>
-      <Item3>
-        <Kind Value="bpkSource"/>
-        <WatchScope Value="wpsLocal"/>
-        <WatchKind Value="wpkWrite"/>
-        <Source Value="versiculo.pas"/>
-        <Line Value="400"/>
-      </Item3>
-      <Item4>
-        <Kind Value="bpkSource"/>
-        <WatchScope Value="wpsLocal"/>
-        <WatchKind Value="wpkWrite"/>
         <Source Value="formexportar.pas"/>
         <Line Value="118"/>
-      </Item4>
+      </Item2>
     </BreakPoints>
     <Watches Count="1">
       <Item1>
