--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -20,7 +20,7 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
-      <BuildNr Value="49"/>
+      <BuildNr Value="50"/>
       <Language Value="0416"/>
       <StringTable CompanyName="Rúbio R. C. Terra (rubio.terra@gmail.com)" FileDescription="Ferramenta para associação de textos bíblicos" ProductName="iBiblia" ProductVersion="0.0.0.0"/>
     </VersionInfo>
@@ -169,8 +169,8 @@
         <UnitName Value="Versiculo"/>
         <EditorIndex Value="9"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="391"/>
-        <CursorPos Y="400"/>
+        <TopLine Value="82"/>
+        <CursorPos X="44" Y="102"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -196,8 +196,8 @@
         <IsVisibleTab Value="True"/>
         <EditorIndex Value="5"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="863"/>
-        <CursorPos X="69" Y="868"/>
+        <TopLine Value="760"/>
+        <CursorPos X="47" Y="777"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -551,126 +551,126 @@
         <UsageCount Value="10"/>
       </Unit39>
     </Units>
-    <JumpHistory Count="30" HistoryIndex="29">
+    <JumpHistory Count="30" HistoryIndex="27">
       <Position1>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="389" Column="3" TopLine="387"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1544" Column="17" TopLine="1524"/>
       </Position1>
       <Position2>
-        <Filename Value="memoversiculo.pas"/>
-        <Caret Line="85" TopLine="60"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="64" Column="19" TopLine="51"/>
       </Position2>
       <Position3>
-        <Filename Value="memoversiculo.pas"/>
-        <Caret Line="36" Column="15" TopLine="24"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="992" Column="17" TopLine="971"/>
       </Position3>
       <Position4>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1580" TopLine="1563"/>
+        <Caret Line="1373" Column="68" TopLine="1352"/>
       </Position4>
       <Position5>
         <Filename Value="projeto.pas"/>
-        <Caret Line="64" Column="19" TopLine="51"/>
+        <Caret Line="129" Column="15" TopLine="118"/>
       </Position5>
       <Position6>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="992" Column="17" TopLine="971"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="389" Column="3" TopLine="387"/>
       </Position6>
       <Position7>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1372" Column="17" TopLine="1352"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="584" Column="3" TopLine="582"/>
       </Position7>
       <Position8>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1373" Column="17" TopLine="1353"/>
+        <Caret Line="149" Column="15" TopLine="137"/>
       </Position8>
       <Position9>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1427" Column="17" TopLine="1407"/>
+        <Caret Line="1586" Column="3" TopLine="1584"/>
       </Position9>
       <Position10>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1544" Column="17" TopLine="1524"/>
+        <Caret Line="117" Column="15" TopLine="105"/>
       </Position10>
       <Position11>
         <Filename Value="projeto.pas"/>
-        <Caret Line="64" Column="19" TopLine="51"/>
+        <Caret Line="714" Column="69" TopLine="709"/>
       </Position11>
       <Position12>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="992" Column="17" TopLine="971"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="86" Column="21" TopLine="68"/>
       </Position12>
       <Position13>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1372" Column="17" TopLine="1352"/>
+        <Caret Line="714" Column="69" TopLine="709"/>
       </Position13>
       <Position14>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1373" Column="17" TopLine="1353"/>
+        <Caret Line="868" Column="69" TopLine="863"/>
       </Position14>
       <Position15>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1427" Column="17" TopLine="1407"/>
+        <Caret Line="128" Column="15" TopLine="117"/>
       </Position15>
       <Position16>
-        <Filename Value="memoversiculo.pas"/>
-        <Caret Line="69" TopLine="55"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="894" Column="3" TopLine="895"/>
       </Position16>
       <Position17>
-        <Filename Value="memoversiculo.pas"/>
-        <Caret Line="80" Column="4" TopLine="57"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="118" Column="15" TopLine="107"/>
       </Position17>
       <Position18>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1544" Column="17" TopLine="1524"/>
+        <Caret Line="776" Column="24" TopLine="756"/>
       </Position18>
       <Position19>
         <Filename Value="projeto.pas"/>
-        <Caret Line="64" Column="19" TopLine="51"/>
+        <Caret Line="993" Column="39" TopLine="978"/>
       </Position19>
       <Position20>
         <Filename Value="projeto.pas"/>
-        <Caret Line="992" Column="17" TopLine="971"/>
+        <Caret Line="1881" Column="43" TopLine="1860"/>
       </Position20>
       <Position21>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1373" Column="68" TopLine="1352"/>
+        <Caret Line="132" Column="34" TopLine="121"/>
       </Position21>
       <Position22>
         <Filename Value="projeto.pas"/>
-        <Caret Line="129" Column="15" TopLine="118"/>
+        <Caret Line="776" Column="24" TopLine="756"/>
       </Position22>
       <Position23>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="389" Column="3" TopLine="387"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="993" Column="39" TopLine="978"/>
       </Position23>
       <Position24>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="584" Column="3" TopLine="582"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1881" Column="43" TopLine="1860"/>
       </Position24>
       <Position25>
         <Filename Value="projeto.pas"/>
-        <Caret Line="149" Column="15" TopLine="137"/>
+        <Caret Line="132" Column="34" TopLine="121"/>
       </Position25>
       <Position26>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1586" Column="3" TopLine="1584"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="401" Column="25" TopLine="391"/>
       </Position26>
       <Position27>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="117" Column="15" TopLine="105"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="32" Column="11" TopLine="14"/>
       </Position27>
       <Position28>
         <Filename Value="projeto.pas"/>
-        <Caret Line="714" Column="69" TopLine="709"/>
+        <Caret Line="775" Column="32" TopLine="735"/>
       </Position28>
       <Position29>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="86" Column="21" TopLine="68"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="74" Column="5" TopLine="61"/>
       </Position29>
       <Position30>
         <Filename Value="projeto.pas"/>
-        <Caret Line="714" Column="69" TopLine="709"/>
+        <Caret Line="54" Column="3" TopLine="41"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
